--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three.html
@@ -354,7 +354,7 @@
                         </div>
                         <div class="form-group mx-2 my-3" style="display: flex;justify-content: center;">
                             <button id="loadDatasetBtn" type="button" class="btn btn-primary btn-block rounded-pill"
-                                disabled><i class="fas fa-spinner"></i></button>
+                                disabled>Load</button>
                         </div>
                     </form>
                 </div>
@@ -421,13 +421,11 @@
 
                 <div id="annCard" class="card-body tab-pane">
                     <div class="row">
-                        <button id="createAnnBtn" type="button" class="btn btn-secondary col-11" disabled>Create
-                            Annotation</button>
+                        <button id="createAnnBtn" type="button" class="btn btn-secondary col-11" disabled>Create Annotation</button>
                     </div>
                     <div class="row">
                         <button id="toggleAnnBtn" type="button" class="btn btn-secondary col-11" disabled
-                            style="width: 60px;">Hide
-                            Annotations</button>
+                            style="width: 60px;">Hide Annotations</button>
                     </div>
 
                     <hr class="m-1" />
