--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/datasets.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/datasets.html
@@ -259,7 +259,7 @@
                                         id="submitBtn">Submit</button>
                                 </div>
                                 <span
-                                    class="file-format-hint">(InstitutionName#DatasetName#Modality#Exposure#Wavelength.tif)</span>
+                                    class="file-format-hint">(Abbr#DatasetName#Modality#Exposure#Wavelength.tif)</span>
                             </div>
 
                             <div class="form-group">
